--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@
 #   * set-misc
 #
 # ==============================================================================
-# Date:     2019-03-27
+# Date:     2019-03-29
 # Author:   Philipp Engel
 # GitHub:   https://github.com/dabamos/openadms-server/
 # ==============================================================================
@@ -142,12 +142,12 @@ http {
             postgres_output text;
 
             if ($output_format = "json") {
-                postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'pid'), '[]'::json) FROM openadms.observations";
+                postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'pid'), '[]'::json) FROM openadms.observations WHERE data->>'type' = 'observation'";
                 more_set_headers    "Content-Type: application/json";
             }
 
             if ($output_format = "csv") {
-                postgres_query      GET "SELECT DISTINCT data->>'pid' FROM openadms.observations";
+                postgres_query      GET "SELECT DISTINCT data->>'pid' FROM openadms.observations WHERE data->>'type' = 'observation'";
                 more_set_headers    "Content-Type: text/csv";
             }
         }
@@ -164,12 +164,12 @@ http {
             postgres_output text;
 
             if ($output_format = "json") {
-                postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'nid'), '[]'::json) FROM openadms.observations WHERE data->>'pid' = '$project_id'";
+                postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'nid'), '[]'::json) FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id'";
                 more_set_headers    "Content-Type: application/json";
             }
 
             if ($output_format = "csv") {
-                postgres_query      GET "SELECT DISTINCT data->>'nid' FROM openadms.observations WHERE data->>'pid' = '$project_id'";
+                postgres_query      GET "SELECT DISTINCT data->>'nid' FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id'";
                 more_set_headers    "Content-Type: text/csv";
             }
         }
@@ -187,12 +187,12 @@ http {
             postgres_output     text;
 
             if ($output_format = "json") {
-                postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'sensorName'), '[]'::json) FROM openadms.observations WHERE data->>'pid' = '$project_id' AND data->>'nid' = '$node_id'";
+                postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'sensorName'), '[]'::json) FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id'";
                 more_set_headers    "Content-Type: application/json";
             }
 
             if ($output_format = "csv") {
-                postgres_query      GET "SELECT DISTINCT data->>'sensorName' FROM openadms.observations WHERE data->>'pid' = '$project_id' AND data->>'nid' = '$node_id'";
+                postgres_query      GET "SELECT DISTINCT data->>'sensorName' FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id'";
                 more_set_headers    "Content-Type: text/csv";
             }
         }
@@ -210,12 +210,12 @@ http {
             postgres_output     text;
 
             if ($output_format = "json") {
-                postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'target'), '[]'::json) FROM openadms.observations WHERE data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor'";
+                postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'target'), '[]'::json) FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor'";
                 more_set_headers    "Content-Type: application/json";
             }
 
             if ($output_format = "csv") {
-                postgres_query      GET "SELECT DISTINCT data->>'target' FROM openadms.observations WHERE data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor'";
+                postgres_query      GET "SELECT DISTINCT data->>'target' FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor'";
                 more_set_headers    "Content-Type: text/csv";
             }
         }
@@ -243,12 +243,12 @@ http {
             postgres_output     text;
 
             if ($output_format = "json") {
-                postgres_query      GET  "SELECT COALESCE(json_agg(data), '[]'::json) FROM openadms.observations WHERE data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor' AND data->>'target' = '$target' AND (data->>'timestamp' BETWEEN '$arg_start' AND '$arg_end')";
+                postgres_query      GET  "SELECT COALESCE(json_agg(data), '[]'::json) FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor' AND data->>'target' = '$target' AND (data->>'timestamp' BETWEEN '$arg_start' AND '$arg_end')";
                 more_set_headers    "Content-Type: application/json";
             }
 
             if ($output_format = "csv") {
-                postgres_query      GET "SELECT (SELECT concat_ws(',', data->>'timestamp', data->>'pid', data->>'nid', data->>'id', data->>'sensorName', data->>'target', string_agg(conc, ',')) FROM (SELECT concat_ws(',', key, string_agg(value, ',')) AS conc FROM (SELECT key, (jsonb_each_text(value)).value FROM jsonb_each(data->'responseSets')) AS x GROUP BY key) AS csv) AS csv FROM openadms.observations WHERE data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor' AND data->>'target' = '$target' AND (data->>'timestamp' BETWEEN '$arg_start' AND '$arg_end') AND (data->'responseSets' IS NOT NULL)";
+                postgres_query      GET "SELECT (SELECT concat_ws(',', data->>'timestamp', data->>'pid', data->>'nid', data->>'id', data->>'sensorName', data->>'target', string_agg(conc, ',')) FROM (SELECT concat_ws(',', key, string_agg(value, ',')) AS conc FROM (SELECT key, (jsonb_each_text(value)).value FROM jsonb_each(data->'responseSets')) AS x GROUP BY key) AS csv) AS csv FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor' AND data->>'target' = '$target' AND (data->>'timestamp' BETWEEN '$arg_start' AND '$arg_end') AND (data->'responseSets' IS NOT NULL)";
                 more_set_headers    "Content-Type: text/csv";
             }
         }
