--- a/openadms-server/api.conf
+++ b/openadms-server/api.conf
@@ -3,7 +3,7 @@
 #
 # Example:
 #     https://localhost/api/v1/
-location ~ "^/api/v1/timeseries/$" {
+location ~ "^/api/v1/observations/$" {
     auth_basic              "Restricted";
     auth_basic_user_file    /usr/local/etc/nginx/.htpasswd;
 
@@ -27,7 +27,7 @@ location ~ "^/api/v1/timeseries/$" {
 
     postgres_pass       postgresql;
     postgres_escape     $json;
-    postgres_query      POST "INSERT INTO openadms.timeseries (data) VALUES ('$json')";
+    postgres_query      POST "INSERT INTO openadms.observations (data) VALUES ('$json')";
     postgres_rewrite    POST changes    201;
     postgres_rewrite    POST no_changes 204;
 }
@@ -44,12 +44,12 @@ location ~ "^/api/v1/projects/$" {
     postgres_output text;
 
     if ($output_format = "json") {
-        postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'pid'), '[]'::json) FROM openadms.timeseries WHERE data->>'type' = 'observation'";
+        postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'pid'), '[]'::json) FROM openadms.observations WHERE data->>'type' = 'observation'";
         more_set_headers    "Content-Type: application/json";
     }
 
     if ($output_format = "csv") {
-        postgres_query      GET "SELECT DISTINCT data->>'pid' FROM openadms.timeseries WHERE data->>'type' = 'observation'";
+        postgres_query      GET "SELECT DISTINCT data->>'pid' FROM openadms.observations WHERE data->>'type' = 'observation'";
         more_set_headers    "Content-Type: text/csv";
     }
 }
@@ -66,12 +66,12 @@ location ~ "^/api/v1/projects/(?<project_id>[\w_-]{1,64})/nodes/$" {
     postgres_output text;
 
     if ($output_format = "json") {
-        postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'nid'), '[]'::json) FROM openadms.timeseries WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id'";
+        postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'nid'), '[]'::json) FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id'";
         more_set_headers    "Content-Type: application/json";
     }
 
     if ($output_format = "csv") {
-        postgres_query      GET "SELECT DISTINCT data->>'nid' FROM openadms.timeseries WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id'";
+        postgres_query      GET "SELECT DISTINCT data->>'nid' FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id'";
         more_set_headers    "Content-Type: text/csv";
     }
 }
@@ -89,12 +89,12 @@ location ~ "^/api/v1/projects/(?<project_id>[\w_-]{1,64})/nodes/(?<node_id>[\w_-
     postgres_output     text;
 
     if ($output_format = "json") {
-        postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'sensorName'), '[]'::json) FROM openadms.timeseries WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id'";
+        postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'sensorName'), '[]'::json) FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id'";
         more_set_headers    "Content-Type: application/json";
     }
 
     if ($output_format = "csv") {
-        postgres_query      GET "SELECT DISTINCT data->>'sensorName' FROM openadms.timeseries WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id'";
+        postgres_query      GET "SELECT DISTINCT data->>'sensorName' FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id'";
         more_set_headers    "Content-Type: text/csv";
     }
 }
@@ -112,12 +112,12 @@ location ~ "^/api/v1/projects/(?<project_id>[\w_-]{1,64})/nodes/(?<node_id>[\w_-
     postgres_output     text;
 
     if ($output_format = "json") {
-        postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'target'), '[]'::json) FROM openadms.timeseries WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor'";
+        postgres_query      GET "SELECT COALESCE(json_agg(DISTINCT data->>'target'), '[]'::json) FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor'";
         more_set_headers    "Content-Type: application/json";
     }
 
     if ($output_format = "csv") {
-        postgres_query      GET "SELECT DISTINCT data->>'target' FROM openadms.timeseries WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor'";
+        postgres_query      GET "SELECT DISTINCT data->>'target' FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor'";
         more_set_headers    "Content-Type: text/csv";
     }
 }
@@ -145,12 +145,12 @@ location ~ "^/api/v1/projects/(?<project_id>[\w-_]{1,64})/nodes/(?<node_id>[\w-_
     postgres_output     text;
 
     if ($output_format = "json") {
-        postgres_query      GET  "SELECT COALESCE(json_agg(data), '[]'::json) FROM openadms.timeseries WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor' AND data->>'target' = '$target' AND (data->>'timestamp' BETWEEN '$arg_start' AND '$arg_end')";
+        postgres_query      GET  "SELECT COALESCE(json_agg(data), '[]'::json) FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor' AND data->>'target' = '$target' AND (data->>'timestamp' BETWEEN '$arg_start' AND '$arg_end')";
         more_set_headers    "Content-Type: application/json";
     }
 
     if ($output_format = "csv") {
-        postgres_query      GET "SELECT (SELECT concat_ws(',', data->>'timestamp', data->>'pid', data->>'nid', data->>'id', data->>'sensorName', data->>'target', string_agg(conc, ',')) FROM (SELECT concat_ws(',', key, string_agg(value, ',')) AS conc FROM (SELECT key, (jsonb_each_text(value)).value FROM jsonb_each(data->'responseSets')) AS x GROUP BY key) AS csv) AS csv FROM openadms.timeseries WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor' AND data->>'target' = '$target' AND (data->>'timestamp' BETWEEN '$arg_start' AND '$arg_end') AND (data->'responseSets' IS NOT NULL)";
+        postgres_query      GET "SELECT (SELECT concat_ws(',', data->>'timestamp', data->>'pid', data->>'nid', data->>'id', data->>'sensorName', data->>'target', string_agg(conc, ',')) FROM (SELECT concat_ws(',', key, string_agg(value, ',')) AS conc FROM (SELECT key, (jsonb_each_text(value)).value FROM jsonb_each(data->'responseSets')) AS x GROUP BY key) AS csv) AS csv FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id' AND data->>'nid' = '$node_id' AND data->>'sensorName' = '$sensor' AND data->>'target' = '$target' AND (data->>'timestamp' BETWEEN '$arg_start' AND '$arg_end') AND (data->'responseSets' IS NOT NULL)";
         more_set_headers    "Content-Type: text/csv";
     }
 }
