--- a/openadms-server/status.conf
+++ b/openadms-server/status.conf
@@ -1,29 +1,35 @@
 # The default error messages. Further ones can be added.
 error_page  404 @404_json;
+error_page  405 @405_json;
 error_page  418 @418_json;
 error_page  500 @500_json;
 
+location @201_json {
+    default_type application/json;
+    return 201 '{ "code": 201, "message": "Created." }';
+}
+
 location @204_json {
     default_type application/json;
-    return 204 '{ "code": 204, "error": "No content." }';
+    return 204 '{ "code": 204, "message": "No content." }';
 }
 
 location @404_json {
     default_type application/json;
-    return 404 '{ "code": 404, "error": "Not found." }';
+    return 404 '{ "code": 404, "message": "Not found." }';
 }
 
 location @405_json {
     default_type application/json;
-    return 404 '{ "code": 405, "error": "Not allowed." }';
+    return 405 '{ "code": 405, "message": "Not allowed." }';
 }
 
 location @418_json {
     default_type application/json;
-    return 418 '{ "code": 418, "error": "I\'m a teapot." }';
+    return 418 '{ "code": 418, "message": "I\'m a teapot." }';
 }
 
 location @500_json {
     default_type application/json;
-    return 500 '{ "code": 500, "error": "Internal server error." }';
+    return 500 '{ "code": 500, "message": "Internal server error." }';
 }
