--- a/nginx.conf
+++ b/nginx.conf
@@ -51,9 +51,14 @@ http {
     # gzip_types          text/csv text/plain application/json application/xml;
 
     # PostgreSQL connection details. Change "localhost" to the IP address of
-    # your database instance, if it is not running on the same host.
+    # your database instance, if it is not running on the same host, and enter
+    # user name and passwort.
+    #
+    # dbname:   PostgreSQL database name.
+    # user:     PostgreSQL user name.
+    # password: PostgreSQL password.
     upstream postgresql {
-        postgres_server     localhost dbname=timeseries user=openadms-server password=secret;
+        postgres_server     localhost dbname=timeseries user=<username> password=<passwort>;
         postgres_keepalive  max=200 overflow=reject;
     }
 
