--- a/openadms-server/api.conf
+++ b/openadms-server/api.conf
@@ -1,21 +1,22 @@
+# ==============================================================================
+# Date:     2020-03-20
+# Author:   Philipp Engel
+# GitHub:   https://github.com/dabamos/openadms-server/
+# ==============================================================================
 # This API provides the following end points:
 #
 # [GET]  https://localhost/api/v1/
+# [POST] https://localhost/api/v1/heartbeats/
 # [POST] https://localhost/api/v1/observations/
 # [GET]  https://localhost/api/v1/observations/<id>/
 # [GET]  https://localhost/api/v1/projects/
 # [GET]  https://localhost/api/v1/projects/<pid>/nodes/
+# [GET]  https://localhost/api/v1/projects/<pid>/nodes/<nid>/heartbeat/
 # [GET]  https://localhost/api/v1/projects/<pid>/nodes/<nid>/sensors/
 # [GET]  https://localhost/api/v1/projects/<pid>/nodes/<nid>/sensors/<sensor>/targets/
 # [GET]  https://localhost/api/v1/projects/<pid>/nodes/<nid>/sensors/<sensor>/targets/<target>/ids/
 # [GET]  https://localhost/api/v1/projects/<pid>/nodes/<nid>/sensors/<sensor>/targets/<target>/observations/
-#
-# ==============================================================================
-# Date:     2020-03-19
-# Author:   Philipp Engel
-# GitHub:   https://github.com/dabamos/openadms-server/
-# ==============================================================================
-#
+
 # Uncomment the following lines to enable cross-origin resource sharing (CORS):
 # location ~ "^/api/" {
 #     if ($request_method = 'OPTIONS') {
@@ -57,6 +58,62 @@ location ~ "^/api/v1/$" {
     more_set_headers    "Content-Type: application/json";
 }
 
+# Stores or updates a "heartbeat" or "ping". Protected with HTTP BasicAuth.
+#
+# Example:
+#     https://localhost/api/v1/heartbeats/
+location ~ "^/api/v1/heartbeats/$" {
+    auth_basic              "Restricted";
+    auth_basic_user_file    /usr/local/etc/nginx/.htpasswd;
+
+    real_ip_header          X-Real-IP;
+    set_real_ip_from        0.0.0.0/0;
+
+    if ($request_method != POST) {
+        return 405;
+    }
+
+    if ($input_type != "form") {
+        return 405;
+    }
+
+    client_max_body_size    10k;
+    client_body_buffer_size 10k;
+
+    set $project_id "";
+    set $node_id    "";
+    set $freq       "";
+
+    rewrite_by_lua_block {
+        ngx.req.read_body()
+        local args, err = ngx.req.get_post_args()
+        ngx.var.project_id = args["pid"]
+        ngx.var.node_id = args["nid"]
+        ngx.var.freq = args["freq"]
+    }
+
+    postgres_escape $project_id;
+    postgres_escape $node_id;
+    postgres_escape $freq;
+
+    if ($project_id = false) {
+        return 405;
+    }
+
+    if ($node_id = false) {
+        return 405;
+    }
+
+    if ($freq = false) {
+        return 405;
+    }
+
+    postgres_pass       postgresql;
+    postgres_query      POST "INSERT INTO openadms.heartbeats (pid, nid, freq, ip, dt) VALUES ('$project_id', '$node_id', '$freq', '$remote_addr', NOW()) ON CONFLICT (pid, nid) DO UPDATE SET pid = '$project_id', nid = '$node_id', freq = '$freq', ip = '$remote_addr', dt = NOW()";
+    postgres_rewrite    POST changes    201;
+    postgres_rewrite    POST no_changes 204;
+}
+
 # Stores time series data in JSON format. Protected with HTTP BasicAuth.
 #
 # Example:
@@ -83,8 +140,13 @@ location ~ "^/api/v1/observations/$" {
         ngx.var.json = ngx.req.get_body_data()
     }
 
+    postgres_escape $json;
+
+    if ($json = false) {
+        return 405;
+    }
+
     postgres_pass       postgresql;
-    postgres_escape     $json;
     postgres_query      POST "INSERT INTO openadms.observations (data) VALUES ('$json')";
     postgres_rewrite    POST changes    201;
     postgres_rewrite    POST no_changes 204;
@@ -153,6 +215,29 @@ location ~ "^/api/v1/projects/(?<project_id>[\w_-]{1,64})/nodes/$" {
 
     if ($output_format = "csv") {
         postgres_query      GET "SELECT DISTINCT data->>'nid' FROM openadms.observations WHERE data->>'type' = 'observation' AND data->>'pid' = '$project_id'";
+        more_set_headers    "Content-Type: text/csv";
+    }
+}
+
+# Returns heartbeat data of given sensor node. Protected by HTTP
+# BasicAuth.
+#
+# Example:
+#     https://localhost/api/v1/projects/pid/nodes/nid/heartbeat/
+location ~ "^/api/v1/projects/(?<project_id>[\w_-]{1,64})/nodes/(?<node_id>[\w_-]{1,64})/heartbeat/$" {
+    auth_basic              "Restricted";
+    auth_basic_user_file    /usr/local/etc/nginx/.htpasswd;
+
+    postgres_pass       postgresql;
+    postgres_output     text;
+
+    if ($output_format = "json") {
+        postgres_query      GET "SELECT row_to_json(t) FROM (SELECT pid, nid, freq, ip, dt FROM openadms.heartbeats WHERE pid = '$project_id' AND nid = '$node_id') t";
+        more_set_headers    "Content-Type: application/json";
+    }
+
+    if ($output_format = "csv") {
+        postgres_query      GET "SELECT array_to_string(array[pid::text, nid::text, freq::int, ip::text, dt::text], ',') FROM openadms.heartbeats WHERE pid = '$project_id' AND nid = '$node_id'";
         more_set_headers    "Content-Type: text/csv";
     }
 }
