--- a/openadms-server/status.conf
+++ b/openadms-server/status.conf
@@ -1,8 +1,10 @@
 # The default error messages. Further ones can be added.
-error_page  404 @404_json;
-error_page  405 @405_json;
-error_page  418 @418_json;
-error_page  500 @500_json;
+error_page 401 @401_json;
+error_page 404 @404_json;
+error_page 405 @405_json;
+error_page 410 @410_json;
+error_page 418 @418_json;
+error_page 500 @500_json;
 
 location @201_json {
     default_type application/json;
@@ -14,6 +16,11 @@ location @204_json {
     return 204 '{ "code": 204, "message": "No content." }';
 }
 
+location @401_json {
+    default_type application/json;
+    return 401 '{ "code": 401, "message": "Unauthorized." }';
+}
+
 location @404_json {
     default_type application/json;
     return 404 '{ "code": 404, "message": "Not found." }';
@@ -22,6 +29,11 @@ location @404_json {
 location @405_json {
     default_type application/json;
     return 405 '{ "code": 405, "message": "Not allowed." }';
+}
+
+location @410_json {
+    default_type application/json;
+    return 410 '{ "code": 410, "message": "Gone." }';
 }
 
 location @418_json {
