--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@
 #   * set-misc
 #
 # ==============================================================================
-# Date:     2020-03-19
+# Date:     2020-03-20
 # Author:   Philipp Engel
 # GitHub:   https://github.com/dabamos/openadms-server/
 # ==============================================================================
@@ -58,7 +58,7 @@ http {
     # user:     PostgreSQL user name.
     # password: PostgreSQL password.
     upstream postgresql {
-        postgres_server     localhost dbname=timeseries user=<username> password=<passwort>;
+        postgres_server     localhost dbname=timeseries user=<username> password=<password>;
         postgres_keepalive  max=200 overflow=reject;
     }
 
