--- a/openadms-server/api.conf
+++ b/openadms-server/api.conf
@@ -1,9 +1,10 @@
-# ==============================================================================
-# Date:     2020-03-22
-# Author:   Philipp Engel
-# GitHub:   https://github.com/dabamos/openadms-server/
-# ==============================================================================
-# This API provides the following end points:
+#  _______                     _______ _____  _______ _______
+# |       |.-----.-----.-----.|   _   |     \|   |   |     __|
+# |   -   ||  _  |  -__|     ||       |  --  |       |__     |
+# |_______||   __|_____|__|__||___|___|_____/|__|_|__|_______|
+#          |__|                                         Server
+#
+# This REST API provides the following end points:
 #
 # [GET]  /api/v1/
 # [POST] /api/v1/heartbeats/
@@ -19,6 +20,12 @@
 # [GET]  /api/v1/projects/<pid>/nodes/<nid>/sensors/<sensor>/targets/
 # [GET]  /api/v1/projects/<pid>/nodes/<nid>/sensors/<sensor>/targets/<target>/ids/
 # [GET]  /api/v1/projects/<pid>/nodes/<nid>/sensors/<sensor>/targets/<target>/observations/
+#
+# ==============================================================================
+# Date:     2020-03-22
+# Author:   Philipp Engel
+# GitHub:   https://github.com/dabamos/openadms-server/
+# ============================================================================== 
 
 # Uncomment the following lines to enable cross-origin resource sharing (CORS):
 # location ~ "^/api/" {
