--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@
 #   * set-misc
 #
 # ==============================================================================
-# Date:     2020-03-20
+# Date:     2020-03-22
 # Author:   Philipp Engel
 # GitHub:   https://github.com/dabamos/openadms-server/
 # ==============================================================================
@@ -31,11 +31,11 @@ load_module /usr/local/libexec/nginx/ngx_http_headers_more_filter_module.so;
 load_module /usr/local/libexec/nginx/ngx_http_set_misc_module.so;
 
 user                www;                        # User to run nginx process under.
-worker_processes    1;                          # Number of worker processes.
+worker_processes    4;                          # Number of worker processes.
 error_log           /var/log/nginx/error.log;   # Path to log file (or /dev/null/).
 
 events {
-    worker_connections  1024;                   # Max. connections per worker.
+    worker_connections  128;                    # Max. connections per worker.
 }
 
 http {
@@ -66,7 +66,7 @@ http {
     include openadms-server/map.conf;
 
     server {
-        listen       80;                # HTTP port.
+        listen       80;                # HTTP port. Change to 443 and SSL certificate.
         server_name  www.example.com;   # CHANGE TO YOUR SERVER NAME!
 
         # Serve the root directory /var/www/.
@@ -91,16 +91,16 @@ http {
         #     proxy_set_header "Access-Control-Allow-Headers" "X-Requested-With, Accept, Content-Type, Origin";
         # }
 
-        # If you are running security/acme-client to obtain X.509 certificates
+        # If you are running `security/acme-client` to obtain X.509 certificates
         # from Let's Encrypt you may want to serve a directory for the
         # challenge files.
         #
         # Change "alias" to the actual path.
-        location ^~ /.well-known/acme-challenge/ {
-            default_type   "text/plain";
-            alias          /mnt/acme/;
-            allow          all;
-        }
+        # location ^~ /.well-known/acme-challenge/ {
+        #     default_type   "text/plain";
+        #     alias          /mnt/acme/;
+        #     allow          all;
+        # }
 
         # Include the OpenADMS Server API and HTTP status code configuration.
         include openadms-server/api.conf;
