--- a/openadms-server/api.conf
+++ b/openadms-server/api.conf
@@ -27,30 +27,31 @@
 # GitHub:   https://github.com/dabamos/openadms-server/
 # ============================================================================== 
 
-# Uncomment the following lines to enable cross-origin resource sharing (CORS):
-# location ~ "^/api/" {
-#     if ($request_method = 'OPTIONS') {
-#         add_header 'Access-Control-Allow-Origin'   '*';
-#         add_header 'Access-Control-Allow-Methods'  'GET, POST, OPTIONS';
-#         add_header 'Access-Control-Allow-Headers'  'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-#         add_header 'Access-Control-Max-Age'        1728000;
-#         add_header 'Content-Type'                  'text/plain; charset=utf-8';
-#         add_header 'Content-Length'                0;
-#         return 204;
-#     }
-#     if ($request_method = 'POST') {
-#         add_header 'Access-Control-Allow-Origin'   '*';
-#         add_header 'Access-Control-Allow-Methods'  'GET, POST, OPTIONS';
-#         add_header 'Access-Control-Allow-Headers'  'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-#         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-#     }
-#     if ($request_method = 'GET') {
-#         add_header 'Access-Control-Allow-Origin'   '*';
-#         add_header 'Access-Control-Allow-Methods'  'GET, POST, OPTIONS';
-#         add_header 'Access-Control-Allow-Headers'  'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-#         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-#     }
-# }
+# Comment out the following lines if cross-origin resource sharing (CORS) is
+# already enabled.
+location ~ "^/api/" {
+    if ($request_method = 'OPTIONS') {
+        add_header 'Access-Control-Allow-Origin'   '*';
+        add_header 'Access-Control-Allow-Methods'  'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers'  'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+        add_header 'Access-Control-Max-Age'        1728000;
+        add_header 'Content-Type'                  'text/plain; charset=utf-8';
+        add_header 'Content-Length'                0;
+        return 204;
+    }
+    if ($request_method = 'POST') {
+        add_header 'Access-Control-Allow-Origin'   '*';
+        add_header 'Access-Control-Allow-Methods'  'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers'  'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+    }
+    if ($request_method = 'GET') {
+        add_header 'Access-Control-Allow-Origin'   '*';
+        add_header 'Access-Control-Allow-Methods'  'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers'  'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+    }
+}
 
 # Returns server information: server time, server uptime, PostgreSQL version.
 # Protected with HTTP BasicAuth.
