Minor comment fix.

--- a/nginx.conf
+++ b/nginx.conf
@@ -35,7 +35,7 @@ worker_processes    4;                          # Number of worker processes.
 error_log           /var/log/nginx/error.log;   # Path to log file (or /dev/null/).
 
 events {
-    worker_connections  128;                    # Max. connections per worker.
+    worker_connections  200;                    # Max. connections per worker.
 }
 
 http {
@@ -66,7 +66,7 @@ http {
     include openadms-server/map.conf;
 
     server {
-        listen       80;                # HTTP port. Change to 443 and SSL certificate.
+        listen       80;                # HTTP port. Change to 443 and add X.509 certificate.
         server_name  www.example.com;   # CHANGE TO YOUR SERVER NAME!
 
         # Serve the root directory /var/www/.
