--- a/nginx/openadms-server/api.conf
+++ b/nginx/openadms-server/api.conf
@@ -29,7 +29,7 @@
 
 # Comment out the following lines if cross-origin resource sharing (CORS) is
 # already enabled.
-location ~ "^/api/" {
+location ^~ "api/v1/" {
     auth_basic              "Restricted";
     auth_basic_user_file    /usr/local/etc/nginx/.htpasswd;
 
