Fixed HTTP BasicAuth.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -66,12 +66,16 @@ http {
     include openadms-server/map.conf;
 
     server {
-        listen       80;                # HTTP port. Change to 443 and add X.509 certificate.
-        server_name  www.example.com;   # CHANGE TO YOUR SERVER NAME!
+        listen      80;                 # HTTP port. Change to 443 and add X.509 certificate.
+        server_name www.example.com;    # CHANGE TO YOUR SERVER NAME!
+        root        /var/www/;          # Root directory for static files.
+
+        # Enable HTTP BasicAuth.
+        auth_basic              "Restricted";
+        auth_basic_user_file    /usr/local/etc/nginx/.htpasswd;
 
         # Serve the root directory /var/www/.
         location / {
-            root     /var/www/;
             index    index.html index.htm;
         }
 
