--- a/nginx/openadms-server/api.conf
+++ b/nginx/openadms-server/api.conf
@@ -29,10 +29,7 @@
 
 # Comment out the following lines if cross-origin resource sharing (CORS) is
 # already enabled.
-location ^~ "api/v1/" {
-    auth_basic              "Restricted";
-    auth_basic_user_file    /usr/local/etc/nginx/.htpasswd;
-
+location ^~ "/api/" {
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin'   '*';
         add_header 'Access-Control-Allow-Methods'  'GET, POST, OPTIONS';
