--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,8 +5,8 @@
 # |_____|  _|___|_|_|__|__|____/|_|_|_|_____|  |_____|___|_|  \_/|___|_|
 #       |_|
 #
-# Configuration file to establish a REST interface with nginx and PostgreSQL.
-# Tested with nginx 1.16 and PostgreSQL 11.5 on FreeBSD 12.
+# Configuration file to run a REST interface with nginx and PostgreSQL. Tested
+# with nginx 1.16 and PostgreSQL 11.5 on FreeBSD 12.
 # ==============================================================================
 # The following 3rd party modules are required:
 #
@@ -77,7 +77,32 @@ http {
         # Serve the root directory /var/www/.
         location / {
             index    index.html index.htm;
+
+            # Comment out the following lines if cross-origin resource sharing (CORS)
+            # is already enabled.
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin'   '*';
+                add_header 'Access-Control-Allow-Methods'  'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers'  'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+                add_header 'Access-Control-Max-Age'        1728000;
+                add_header 'Content-Type'                  'text/plain; charset=utf-8';
+                add_header 'Content-Length'                0;
+                return 204;
+            }
+            if ($request_method = 'POST') {
+                add_header 'Access-Control-Allow-Origin'   '*';
+                add_header 'Access-Control-Allow-Methods'  'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers'  'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+            }
+            if ($request_method = 'GET') {
+                add_header 'Access-Control-Allow-Origin'   '*';
+                add_header 'Access-Control-Allow-Methods'  'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers'  'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+            }
         }
+    }
 
         # Uncomment the following lines if you run nginx in front of an Apache
         # CouchDB 2 database server with CORS enabled. Access Futon web
@@ -97,10 +122,9 @@ http {
 
         # If you are running `security/acme-client` to obtain X.509 certificates
         # from Let's Encrypt you may want to serve a directory for the
-        # challenge files.
+        # challenge files. Change `alias`to the actual path.
         #
-        # Change "alias" to the actual path.
-        # location ^~ /.well-known/acme-challenge/ {
+        # location ^~ "/.well-known/acme-challenge/" {
         #     default_type   "text/plain";
         #     alias          /mnt/acme/;
         #     allow          all;
