--- a/nginx/openadms-server/api.conf
+++ b/nginx/openadms-server/api.conf
@@ -22,7 +22,7 @@
 # [GET]  /api/v1/projects/<pid>/nodes/<nid>/sensors/<sensor>/targets/<target>/observations/?start=<timestamp>&end=<timestamp>
 #
 # ==============================================================================
-# Date:     2020-03-23
+# Date:     2020-03-24
 # Author:   Philipp Engel
 # GitHub:   https://github.com/dabamos/openadms-server/
 # ============================================================================== 
@@ -211,7 +211,7 @@ location ~ "^/api/v1/projects/$" {
     }
 
     if ($output_format = "csv") {
-        postgres_query      GET "SELECT openadms.get_project_ids_csv()";
+        postgres_query      GET "SELECT * FROM openadms.get_project_ids_csv()";
         more_set_headers    "Content-Type: text/csv";
     }
 }
@@ -232,7 +232,7 @@ location ~ "^/api/v1/projects/(?<project_id>[\w_-]{1,64})/nodes/$" {
     }
 
     if ($output_format = "csv") {
-        postgres_query      GET "SELECT openadms.get_sensor_node_ids_csv($project_id)";
+        postgres_query      GET "SELECT * FROM openadms.get_sensor_node_ids_csv($project_id)";
         more_set_headers    "Content-Type: text/csv";
     }
 }
@@ -285,7 +285,7 @@ location ~ "^/api/v1/projects/(?<project_id>[\w_-]{1,64})/nodes/(?<node_id>[\w_-
     }
 
     if ($output_format = "csv") {
-        postgres_query      GET "SELECT openadms.get_logs_csv($project_id, $node_id, $start, $end)";
+        postgres_query      GET "SELECT * FROM openadms.get_logs_csv($project_id, $node_id, $start, $end)";
         more_set_headers    "Content-Type: text/csv";
     }
 }
@@ -307,7 +307,7 @@ location ~ "^/api/v1/projects/(?<project_id>[\w_-]{1,64})/nodes/(?<node_id>[\w_-
     }
 
     if ($output_format = "csv") {
-        postgres_query      GET "SELECT openadms.get_sensors_csv($project_id, $node_id)";
+        postgres_query      GET "SELECT * FROM openadms.get_sensors_csv($project_id, $node_id)";
         more_set_headers    "Content-Type: text/csv";
     }
 }
@@ -330,7 +330,7 @@ location ~ "^/api/v1/projects/(?<project_id>[\w_-]{1,64})/nodes/(?<node_id>[\w_-
     }
 
     if ($output_format = "csv") {
-        postgres_query      GET "SELECT openadms.get_targets_csv($project_id, $node_id, $sensor)";
+        postgres_query      GET "SELECT * FROM openadms.get_targets_csv($project_id, $node_id, $sensor)";
         more_set_headers    "Content-Type: text/csv";
     }
 }
@@ -354,7 +354,7 @@ location ~ "^/api/v1/projects/(?<project_id>[\w-_]{1,64})/nodes/(?<node_id>[\w-_
     }
 
     if ($output_format = "csv") {
-        postgres_query      GET "SELECT openadms.get_observation_ids_csv($project_id, $node_id, $sensor, $target)";
+        postgres_query      GET "SELECT * FROM openadms.get_observation_ids_csv($project_id, $node_id, $sensor, $target)";
         more_set_headers    "Content-Type: text/csv";
     }
 }
@@ -388,7 +388,7 @@ location ~ "^/api/v1/projects/(?<project_id>[\w-_]{1,64})/nodes/(?<node_id>[\w-_
     }
 
     if ($output_format = "csv") {
-        postgres_query      GET "SELECT openadms.get_observations_csv($project_id, $node_id, $sensor, $target, $start, $end)";
+        postgres_query      GET "SELECT * FROM openadms.get_observations_csv($project_id, $node_id, $sensor, $target, $start, $end)";
         more_set_headers    "Content-Type: text/csv";
     }
 }
