--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@
 #       |_|
 #
 # Configuration file to run a REST interface with nginx and PostgreSQL. Tested
-# with nginx 1.16 and PostgreSQL 11.5 on FreeBSD 12.
+# with nginx 1.16 and PostgreSQL 11.7 on FreeBSD 12.
 # ==============================================================================
 # The following 3rd party modules are required:
 #
@@ -18,12 +18,12 @@
 #   * set-misc
 #
 # ==============================================================================
-# Date:     2020-03-22
+# Date:     2020-03-29
 # Author:   Philipp Engel
 # GitHub:   https://github.com/dabamos/openadms-server/
 # ==============================================================================
-# Load modules required modules on FreeBSD. On Linux, you have to change the
-# paths according to your set-up.
+# Load required modules on FreeBSD. On Linux, you have to change the paths
+# according to your set-up.
 load_module /usr/local/libexec/nginx/ndk_http_module.so;
 load_module /usr/local/libexec/nginx/ngx_http_form_input_module.so;
 load_module /usr/local/libexec/nginx/ngx_http_lua_module.so;
@@ -48,7 +48,7 @@ http {
 
     # Uncomment the following two lines to enables GZIP compression.
     # gzip                on;
-    # gzip_types          text/csv text/plain application/json application/xml;
+    # gzip_types          text/csv text/plain application/json;
 
     # PostgreSQL connection details. Change "localhost" to the IP address of
     # your database instance, if it is not running on the same host, and enter
@@ -66,11 +66,11 @@ http {
     include openadms-server/map.conf;
 
     server {
-        listen      80;                 # HTTP port. Change to 443 and add X.509 certificate.
+        listen      80;                 # HTTP port. Change to 443 and add an X.509 certificate.
         server_name www.example.com;    # CHANGE TO YOUR SERVER NAME!
         root        /var/www/;          # Root directory for static files.
 
-        # Enable HTTP BasicAuth.
+        # Enable HTTP Basic Auth.
         auth_basic              "Restricted";
         auth_basic_user_file    /usr/local/etc/nginx/.htpasswd;
 
@@ -122,7 +122,7 @@ http {
 
         # If you are running `security/acme-client` to obtain X.509 certificates
         # from Let's Encrypt you may want to serve a directory for the
-        # challenge files. Change `alias`to the actual path.
+        # challenge files. Change `alias` to the actual path.
         #
         # location ^~ "/.well-known/acme-challenge/" {
         #     default_type   "text/plain";
