Several minor updates.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,9 +46,9 @@ http {
     access_log          /dev/null;
     keepalive_timeout   65;
 
-    # Uncomment the following two lines to enables GZIP compression.
-    # gzip                on;
-    # gzip_types          text/csv text/plain application/json;
+    # Enable GZIP compression for HTML, CSV, and JSON.
+    gzip                on;
+    gzip_types          application/xhtml+xml text/csv text/plain application/json;
 
     # PostgreSQL connection details. Change "localhost" to the IP address of
     # your database instance, if it is not running on the same host, and enter
