Fixed PostgreSQL schema.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,6 +29,7 @@ load_module /usr/local/libexec/nginx/ngx_http_form_input_module.so;
 load_module /usr/local/libexec/nginx/ngx_http_lua_module.so;
 load_module /usr/local/libexec/nginx/ngx_http_headers_more_filter_module.so;
 load_module /usr/local/libexec/nginx/ngx_http_set_misc_module.so;
+load_module /usr/local/libexec/nginx/ngx_postgres_module.so;
 
 user                www;                        # User to run nginx process under.
 worker_processes    4;                          # Number of worker processes.
